<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecetaActivity">


    <ImageView
        android:id="@+id/img_receta_form"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chef_hat" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_receta_form">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_receta_id_form"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/defaul_text_short"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/lbl_receta_nombre_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_receta_nombre"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_receta_nombre_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/defaul_text_short"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lbl_receta_descripcion_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_receta_descripcion"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_receta_descripcion_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/defaul_text_long"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lbl_receta_ingredientes_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_receta_ingredientes"
                android:textSize="14sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView_ingredientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="4"
                android:layout_marginVertical="20dp"
                tools:listitem="@layout/cardview_ingrediente" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swicth_receta_favorito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_receta_favorito" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_empezar_receta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_receta_empezar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/btn_subir_receta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/btn_receta_subir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_empezar_receta" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>